# array-statistics

./: .gitignore  CHANGELOG.md  LICENSE  array-statistics.cabal  cabal.project
bench/: Main.hs
src/Statistics/: Array.hs
src/Statistics/Array/: Quartile.hs  Types.hs
test/: Main.hs
