cabal-version: 3.0
name: array-statistics
version: 0.0.1.0
-- synopsis: 
-- description:
category: Security
homepage: https://github.com/Zankoku-Okuno/array-statistics
bug-reports: https://github.com/Zankoku-Okuno/array-statistics/issues
author: Eric Demko
maintainer: edemko@layer3com.com
copyright: 2021 Eric Demko
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Statistics.Array.Types
    Statistics.Array.Quartile
  -- other-modules:
  build-depends:
    , base >=4.11.1
    , contiguous >=0.6.1
    , primitive-sort
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Wunticked-promoted-constructors

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , array-statistics
    , base
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -O2

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , array-statistics
    , base
    , gauge
  default-language: Haskell2010
  ghc-options: -Wall -O2
